feat(pwa): add PWA support and mobile responsive styles
Ajout de manifest.json, icônes, service worker, adaptations CSS pour mobile et documentation dans README.md.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#667eea">
+    <link rel="manifest" href="manifest.json">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <link rel="apple-touch-icon" href="icons/icon-192.svg">
     <title>Notes de Musique - Jeu d'apprentissage</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -69,6 +74,14 @@
         </div>
     </div>
 
-    <script type="module" src="script.js"></script>
+        <script type="module" src="script.js"></script>
+        <script>
+            // Service worker registration for PWA
+            if ('serviceWorker' in navigator) {
+                window.addEventListener('load', () => {
+                    navigator.serviceWorker.register('/sw.js').catch(() => {});
+                });
+            }
+        </script>
 </body>
 </html>
