--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
             <div class="instruction" id="instruction"></div>
             <div class="current-note" id="currentNote">Do</div>
 
+            <div style="text-align:center; margin-top:10px;">
+                <button id="installBtn" class="start-game-btn" style="display:none;">📥 Installer</button>
+            </div>
+
             <div class="notes-grid" id="notesGrid"></div>
 
             <div class="feedback" id="feedback"></div>
