style: supprimer l'emoji du bouton "Commencer" pour une présentation plus épurée

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             <div class="actions">
                 <button class="start-game-btn" id="startGameBtn" disabled>
-                    🎮 Commencer
+                    Commencer
                 </button>
             </div>
         </div>
