--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="card container">
             <h1 class="sr-only">Do Ré Mi Challenge</h1>
 
-            <p style="text-align: center;">
+            <p style="text-align: center; margin-top: 0px;">
                 <img src="logo.png" alt="Logo du jeu Do Ré Mi Challenge" class="logo" width="135px">
             </p>
 
