--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <div class="game-area" id="gameArea">
     <div class="score-board">
-        <p>Réponses : 0/0</p>
+        <p id="scoreInline">Réponses : 0/0</p>
     </div>
 
     <div class="timer-text" id="timerText"></div>
